SET(LIBNAME "DC_fiducial")
FILE(GLOB SRCS *.cpp)

FILE(GLOB HEADERS "${CMAKE_SOURCE_DIR}/include/DC_fiducial.h")
set(INCLUDES ${ROOT_INCLUDE_DIR} "${CMAKE_SOURCE_DIR}/include" )
INCLUDE_DIRECTORIES(${INCLUDES})

# build the library
ADD_LIBRARY(${LIBNAME} SHARED ${SRCS} ${HEADERS})
TARGET_LINK_LIBRARIES(${LIBNAME} ${ROOT_LIBRARIES} )
INSTALL ( TARGETS ${LIBNAME} DESTINATION "${CMAKE_SOURCE_DIR}/lib")

